--- a/website/index.html
+++ b/website/index.html
@@ -532,11 +532,13 @@ buildtool: false
 
 				<button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
 
-				<button class="pswp__button pswp__button--share" title="Share"></button>
+				<button class="pswp__button pswp__button--share" title="Rotate"></button>
 
 				<button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
 
 				<button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+				<button class="pswp__button pswp__button--download" title="Download"></button>
 
 				<div class="pswp__preloader">
 					<div class="pswp__preloader__icn">
